; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/phonet/extr_pep-gprs.c_gprs_data_ready.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/phonet/extr_pep-gprs.c_gprs_data_ready.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { %struct.gprs_dev* }
%struct.gprs_dev = type { i32 }
%struct.sk_buff = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sock*, i32)* @gprs_data_ready to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gprs_data_ready(%struct.sock* %0, i32 %1) #0 {
  %3 = alloca %struct.sock*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.gprs_dev*, align 8
  %6 = alloca %struct.sk_buff*, align 8
  store %struct.sock* %0, %struct.sock** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.sock*, %struct.sock** %3, align 8
  %8 = getelementptr inbounds %struct.sock, %struct.sock* %7, i32 0, i32 0
  %9 = load %struct.gprs_dev*, %struct.gprs_dev** %8, align 8
  store %struct.gprs_dev* %9, %struct.gprs_dev** %5, align 8
  br label %10

10:                                               ; preds = %14, %2
  %11 = load %struct.sock*, %struct.sock** %3, align 8
  %12 = call %struct.sk_buff* @pep_read(%struct.sock* %11)
  store %struct.sk_buff* %12, %struct.sk_buff** %6, align 8
  %13 = icmp ne %struct.sk_buff* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %10
  %15 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %16 = call i32 @skb_orphan(%struct.sk_buff* %15)
  %17 = load %struct.gprs_dev*, %struct.gprs_dev** %5, align 8
  %18 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %19 = call i32 @gprs_recv(%struct.gprs_dev* %17, %struct.sk_buff* %18)
  br label %10

20:                                               ; preds = %10
  ret void
}

declare dso_local %struct.sk_buff* @pep_read(%struct.sock*) #1

declare dso_local i32 @skb_orphan(%struct.sk_buff*) #1

declare dso_local i32 @gprs_recv(%struct.gprs_dev*, %struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
